feat: add base cards render

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -1,8 +1,15 @@
 .game-container {
   display: block;
-  width: 400px;
-  height: 400px;
+  position: relative;
+  width: 1000px;
+  height: 1000px;
   background-image: url('https://raw.githubusercontent.com/rolling-scopes-school/rss-puzzle-data/main/images/level1/9th_wave.jpg');
   background-position: center;
   background-size: cover;
+}
+
+.puzzle-piece {
+  position: absolute;
+  border: 1px solid #000;
+  background-color: rgba(255, 255, 255, 0.5);
 }
