--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -12,4 +12,6 @@
   position: absolute;
   border: 1px solid greenyellow;
   color: greenyellow;
+
+  background-color: rgba(128, 128, 128, 0.5);
 }
