Feat:RSS-PZ-09 dynamic sizing (#39)
* feat: add row for puzzle

* refactor: refact setupPuzzle method for using flex

* feat: add flexible puzzle width

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -1,6 +1,6 @@
 .game-container {
   display: block;
-  position: relative;
+  // position: relative;
   width: 760px;
   height: 760px;
   background-position: center;
@@ -8,8 +8,11 @@
   z-index: 1;
 }
 
+.row-container {
+  display: flex;
+}
 .puzzle-piece {
-  position: absolute;
+  flex-grow: 1;
   border: 1px solid greenyellow;
   color: greenyellow;
 
