feat:RSS-PZ-10 add active styles for elements

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -25,6 +25,10 @@
   border: 1px solid black;
 }
 
+.collecting-field_active {
+  background-color: aqua;
+}
+
 .collecting-container {
   margin: 0 auto;
   display: block;
