--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -41,8 +41,8 @@
   display: flex;
 }
 .puzzle-piece {
-  flex-grow: 1;
-  border: 1px solid yellow;
+  // flex-grow: 1;
+  border: 1px solid black;
   color: black;
   text-shadow: 0 0 5px white;
 
