feat: RSS-PZ-10 add adding puzzle back to row-container

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -34,7 +34,7 @@
   display: block;
   width: 700px;
   height: 500px;
-  background-color: gray;
+  background-color: rgba(128, 128, 128, 0.5);
 }
 
 .row-container {
