--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -49,3 +49,11 @@
   background-color: rgba(128, 128, 128, 0.5);
   font-size: 14px;
 }
+
+.puzzle_false {
+  border: 5px solid red;
+}
+
+.row-container-collecting_active_complete {
+  border: 5px solid green;
+}
