--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -53,6 +53,12 @@
   align-items: center;
 }
 
+.word {
+  background-color: yellow;
+  width: 100%;
+  height: 100%;
+}
+
 .puzzle-piece_hide {
   background-color: rgba(128, 128, 128, 0.5);
 }
