--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -44,12 +44,30 @@
   // flex-grow: 1;
   border: 1px solid black;
   color: black;
-  text-shadow: 0 0 5px white;
-
   background-color: rgba(128, 128, 128, 0.5);
   font-size: 14px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.word {
+  background-color: rgba(255, 255, 0, 1);
+  width: 100%;
+  height: 100%;
+}
+
+.word_open {
+  background-color: rgba(255, 255, 0, 0);
+  text-shadow: 0 0 5px yellow;
+  width: auto;
+  height: auto;
+}
+
+.puzzle-piece_hide {
+  background-color: rgba(128, 128, 128, 0.5);
+}
 .puzzle_false {
   border: 5px solid red;
 }
