feat:RSS-PZ-17 add dynamic render into translation field

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -79,3 +79,10 @@
 .puzzle_disable {
   pointer-events: none;
 }
+
+.translation-field {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
