--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -3,6 +3,7 @@
 }
 
 .main {
+  position: relative;
   height: 100vh;
   overflow: hidden;
 }
@@ -82,6 +83,17 @@
 
 .translation-field {
   height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-after-round {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: aqua;
+
   display: flex;
   justify-content: center;
   align-items: center;
