--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -92,9 +92,12 @@
   position: absolute;
   width: 100vw;
   height: 100vh;
-  background-color: aqua;
-
+  background-color: white;
+}
+.info-block-wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 30px;
 }
