Feat: RSS-PZ-28 reveal backround img (#53)
* feat:RSS-PZ-28 locate end round place

* feat:RSS-PZ-28 add destroy round function

* feat:RSS-PZ-28 add complete round field

* feat: RSS-PZ-28 add next level button

* feat: RSS-PZ-28 and next step after push continue button

* fix:RSS-PZ-28 fix bugs with status hint buttons

* feat: RSS-PZ-28 add next step for round list after push continue button

--- a/rss-puzzle/src/sass/componets/game-filed.scss
+++ b/rss-puzzle/src/sass/componets/game-filed.scss
@@ -3,6 +3,7 @@
 }
 
 .main {
+  position: relative;
   height: 100vh;
   overflow: hidden;
 }
@@ -85,4 +86,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.info-after-round {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+}
+.info-block-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
 }
