feat:RSS-PZ-03 creat greetings field

--- a/rss-puzzle/src/main.scss
+++ b/rss-puzzle/src/main.scss
@@ -1,3 +1,4 @@
 // componets
 @import 'sass/componets/game-filed.scss';
 @import 'sass/componets/input.scss';
+@import 'sass/componets/greetings.scss';
