--- a/async-race/src/race/race.scss
+++ b/async-race/src/race/race.scss
@@ -8,3 +8,22 @@
     width: 100px;
     height: 50px;
 }
+
+.car-container{
+    width: 100px;
+    position: relative;
+    left: 0;
+}
+
+.car-container_move{
+    animation: move 5s linear forwards;
+}
+
+@keyframes move {
+    0% {
+      left: 0;
+    }
+    100% {
+      left: calc(100% - 100px);
+    }
+  }
