feat:AR-RSS-11 add basic view winners

--- a/async-race/src/style.scss
+++ b/async-race/src/style.scss
@@ -1,2 +1,4 @@
 @import 'race/race.scss';
-@import 'inputs/inputs.scss'
+@import 'inputs/inputs.scss';
+@import 'race/winners.scss';
+@import 'app/main.scss';
