feat:AR-RSS-11 add geometric for wins cars

--- a/async-race/src/race/winners.scss
+++ b/async-race/src/race/winners.scss
@@ -9,4 +9,21 @@
 
 .win-car {
     display: flex;
+    width: 200px;
+}
+
+.number-of-table {
+    width: 30px;
+}
+
+.win-car-name {
+    width: 100px;
+}
+
+.win-car-wins {
+    width: 30px;
+}
+
+.win-car-time {
+    width: 30px;
 }
