--- a/async-race/src/race/race.scss
+++ b/async-race/src/race/race.scss
@@ -1,4 +1,5 @@
 .road{
+    position: relative;
     width: 100%;
     height: 50px;
     border-bottom: 4px dotted black;
@@ -13,6 +14,13 @@
     width: 100px;
     position: relative;
     left: 0;
+}
+
+.flag-container {
+    width: 50px;
+    position: absolute;
+    right: 70px;
+    top: -10px;
 }
 
 .car-container_pause {
