--- a/fun-chat/src/styles/body.scss
+++ b/fun-chat/src/styles/body.scss
@@ -6,6 +6,9 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    margin: 0;
+    padding: 0;
 }
 
 .input-first-name, .input-second-name, .log-in-button, .log-out-button {
