--- a/fun-chat/src/style.scss
+++ b/fun-chat/src/style.scss
@@ -1,3 +1,5 @@
 @import "./styles/body.scss";
 @import "./styles/login.scss";
-@import './styles/popUp.scss';
+@import "./styles/popUp.scss";
+@import "./styles/messenger.scss";
+@import "./styles/footer.scss";
