--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -53,3 +53,8 @@
 .messenger__users-list-element_unactive {
     color: red;
 }
+
+.messenger__users-list-element:hover {
+    background-color: rgb(243, 233, 233);
+    cursor: pointer;
+}
