feat: add searching users

--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -60,6 +60,10 @@
     cursor: pointer;
 }
 
+.messenger__users-list-element_hidden {
+    display: none;
+}
+
 .messenger__users-list{
     display: block;
     height: 90%;
