feat: add styles for messenger

--- a/fun-chat/src/styles/body.scss
+++ b/fun-chat/src/styles/body.scss
@@ -14,3 +14,7 @@ body {
 .input-first-name, .input-second-name, .log-in-button, .log-out-button {
     display: block;
 }
+
+button {
+    cursor: pointer;
+}
