--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -47,6 +47,10 @@
     margin: 10px;
 }
 
+.messenger__users-list-element {
+    min-width: 30px;
+}
+
 .messenger__users-list-element_active {
     color: black;
 }
