feat: add selected user in list

--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -59,6 +59,10 @@
     color: red;
 }
 
+.messenger__users-list_selected {
+    background-color: rgb(243, 233, 233); 
+}
+
 .messenger__users-list-element:hover {
     background-color: rgb(243, 233, 233);
     cursor: pointer;
