feat: add dinamyc status for delevired messages

--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -72,6 +72,10 @@
     display: none;
 }
 
+.messenger__text{
+    padding: 5px;
+}
+
 .messenger__users-list{
     display: block;
     height: 80%;
