feat: add base edit menu

--- a/fun-chat/src/style.scss
+++ b/fun-chat/src/style.scss
@@ -4,3 +4,4 @@
 @import "./styles/messenger.scss";
 @import "./styles/footer.scss";
 @import "./styles/app.scss";
+@import "./styles/editMenu.scss";
