feat, fix: add notification about start talking, fix editing buttons

--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -92,7 +92,7 @@
     // justify-content: flex-end;
     gap: 10px;
 }
-.messenger__window-messenger{
+.messenger__window-messenger, .messenger__empty-history{
     text-align: center;
     align-self: center;
     padding-top: 50px;
