fix: fix color active user

--- a/fun-chat/src/styles/messenger.scss
+++ b/fun-chat/src/styles/messenger.scss
@@ -54,7 +54,7 @@
 }
 
 .messenger__users-list-element_active {
-    color: black;
+    color: green;
 }
 
 .messenger__users-list-element_unactive {
