--- a/fun-chat/src/styles/body.scss
+++ b/fun-chat/src/styles/body.scss
@@ -10,6 +10,8 @@ body {
 
     margin: 0;
     padding: 0;
+
+    box-sizing: border-box;
 }
 
 .input-first-name, .input-second-name, .log-in-button, .log-out-button {
