--- a/fun-chat/src/style.scss
+++ b/fun-chat/src/style.scss
@@ -6,3 +6,4 @@
 @import "./styles/app.scss";
 @import "./styles/editMenu.scss";
 @import "./styles/about.scss";
+@import "./styles/popUpconnecting.scss";
