--- a/fun-chat/src/styles/body.scss
+++ b/fun-chat/src/styles/body.scss
@@ -1,23 +1,26 @@
 body {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-.input-first-name, .input-second-name, .log-in-button, .log-out-button {
-    display: block;
+.input-first-name,
+.input-second-name,
+.log-in-button,
+.log-out-button {
+  display: block;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
